# esp-template

./: .gitdpod.Dockerfile  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build.sh  cargo-generate.toml  diagram.json  flash.sh  init-script.rhai  post-script.rhai  pre-script.rhai  run-wokwi.sh  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: rust_ci.yml  verify.sh
.github/workflows/: build-check.yml  ci.yml  ci_docker.yml  rust_ci.yml
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
simple/: cargo-generate.toml  post-script.rhai  pre-script.rhai
src/: main.rs
