[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp-hal = { features = [
    "{{ mcu }}",
], git = "https://github.com/esp-rs/esp-hal.git", rev = "6a663f8b1a6bd273cd41d49e2096b8c4906e9da4" }
esp-backtrace = { version = "0.11.0", features = ["{{ mcu }}", "panic-handler", "exception-handler", "println"] }
{% if logging -%}
esp-println = { version = "0.9.0", features = ["{{ mcu }}", "log"] }
log = { version = "0.4.20" }
{% else -%}
esp-println = { version = "0.9.0", features = ["{{ mcu }}"] }
{% endif -%}
{% if alloc -%}
esp-alloc = { version = "0.3.0" }
{% endif -%}
{% if wifi -%}
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", rev = "9be1c01b85d079ea365784216e59ebd0f6a9193d", features = [
    "{{ mcu }}",
    "wifi-default",
    "utils",
    "phy-enable-usb",
] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false }
{% endif -%}
