[package]
name = "{{ project-name }}"
version = "0.1.0"
authors = ["{{ authors }}"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "{{ mcu }}",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "{{ mcu }}" ] }
esp-println = { version = "0.11.0", features = ["{{ mcu }}", "log"] }
log = { version = "0.4.21" }
{% if alloc -%}
esp-alloc = { version = "0.4.0" }
{% endif -%}
{% if wifi -%}
embedded-io = "0.6.1"
esp-wifi = { version = "0.8.0", features = [
    "{{ mcu }}",
    "phy-enable-usb",
    "utils",
    "{{ esp_wifi_feature }}",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
{% endif -%}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
